# halcyon

./: Cargo.toml
examples/metal/: actions.rs  app_state.rs  build_shaders  main.rs  shaders.metal
examples/metal/actions/: mod.rs
examples/metal_primitives/: main.rs  shaders.metal
src/: engines.rs  internal_state.rs  lib.rs  metal_stage.rs  scene_2d.rs  stage.rs  stage_config.rs  state_management.rs
src/geometry/: mod.rs  square.rs  triangle.rs
src/internal_actions/: mod.rs
src/math/: mat3.rs  mod.rs  vec2.rs
src/primitive_2d/: mod.rs  rectangle.rs  triangle.rs
src/stages/: mod.rs
src/stages/metal_stage/: metal_stage.rs  metal_stage_config.rs  mod.rs
src/texture/: color_texture.rs  image_texture.rs  mod.rs
src/utils/: color.rs  helpers.rs  mod.rs  pixel.rs
